# x86-simd-sort

./: .gitignore  Makefile  Makefile.bak2  README.md  SECURITY.md  _clang-format  bench-compare.sh  example.c  meson.build  meson_options.txt  run-bench.py
.github/workflows/: build-numpy.yml  build-test-on-32bit.sh  build-test-on-docker.sh  build.yaml  c-api-linux.yaml  c-api-win-msvc.yaml  c-api-win.yaml  c-cpp.yml  linting.yaml  linting.yml  scorecard.yml
benchmarks/: bench-all.cpp  bench-argsort.hpp  bench-avx2.cpp  bench-ipp.cpp  bench-keyvalue.hpp  bench-objsort.hpp  bench-partial-qsort.hpp  bench-qselect.hpp  bench-qsort-common.h  bench-qsort.hpp  bench-qsortfp16.cpp  bench-tgl.out  bench-vqsort.cpp  bench.h  bench.hpp  bench_argsort.hpp  bench_partial_qsort.hpp  bench_qselect.hpp  bench_qsort.cpp  bench_qsort.hpp  bench_qsortfp16.cpp  main.cpp  meson.build
examples/: Makefile  avx2-32bit-qsort.cpp  avx512-16bit-qsort.cpp  avx512-32bit-qsort.cpp  avx512-64bit-qsort.cpp  avx512-argsort.cpp  avx512-kv.cpp  avx512fp-16bit-qsort.cpp  icl-16bit.cpp  skx-avx2.cpp  spr-16bit.cpp
lib/: c-api-def.h  c-api-export.h  c-api-header-gen.h  c-api-headers.h  c-api-ver.h  c-api-x-macro2.h  list-of-exported-symbols.txt  meson.build  mk-c-api.sed  x-macro1.h  x-macro2.h  x86simdsort-avx2.cpp  x86simdsort-gen-c-api.h  x86simdsort-icl.cpp  x86simdsort-internal.h  x86simdsort-orders.h  x86simdsort-scalar.h  x86simdsort-skx.cpp  x86simdsort-spr.cpp  x86simdsort.cpp  x86simdsort.h  x86simdsortcpuid.h
make-c-api/: .gitignore  Makefile  smoke.cpp  smoke.sln  smoke.vcxproj
misc/: bench-simdobjsort.txt  simd-objsort.ipynb
scripts/: bench-compare.sh  branch-compare.sh  run-bench.py
src/: README.md  avx2-32bit-common.h  avx2-32bit-half.hpp  avx2-32bit-qsort.hpp  avx2-32bit-qsort.hpp.backup  avx2-64bit-common.h  avx2-64bit-emu-perm.hpp  avx2-64bit-qsort.hpp  avx2-common-qsort.h  avx2-emu-funcs.hpp  avx2-network-qsort.hpp  avx512-16bit-common.h  avx512-16bit-qsort.hpp  avx512-32bit-qsort.hpp  avx512-64bit-argsort.hpp  avx512-64bit-common.h  avx512-64bit-keyvalue-networks.hpp  avx512-64bit-keyvaluesort.hpp  avx512-64bit-qsort.hpp  avx512-common-argsort.h  avx512-common-keyvaluesort.h  avx512-common-qsort.h  avx512-zmm-classes.h  avx512_64bit_keyvaluesort.hpp  avx512fp16-16bit-qsort.hpp  x86simdsort-static-incl.h  xss-common-argsort.h  xss-common-comparators.hpp  xss-common-includes.h  xss-common-keyvaluesort.hpp  xss-common-qsort.h  xss-custom-float.h  xss-network-keyvaluesort.hpp  xss-network-qsort.hpp  xss-optimal-networks.hpp  xss-pivot-selection.hpp  xss-reg-networks.hpp  xss-thread-pool.hpp
tests/: main.cpp  meson.build  test-argselect.hpp  test-argsort-common.h  test-argsort.cpp  test-argsort.hpp  test-avx2.cpp  test-keyvalue.cpp  test-objqsort.cpp  test-partial-qsort.hpp  test-qselect.hpp  test-qsort-common.h  test-qsort-fp.hpp  test-qsort.cpp  test-qsort.hpp  test-qsortfp16.cpp  test_all.cpp  test_argsort.cpp  test_keyvalue.cpp  test_partial_qsort.hpp  test_qselect.hpp  test_qsort.cpp  test_qsort.hpp  test_qsortfp16.cpp  test_sort.cpp
utils/: cpuinfo.cpp  cpuinfo.h  custom-compare.h  custom-float.h  meson.build  rand_array.h
