option('build_tests', type : 'boolean', value : false,
  description : 'Build test suite (default: "false").')
option('build_benchmarks', type : 'boolean', value : false,
  description : 'Build benchmarking suite (default: "false").')
option('build_ippbench', type : 'boolean', value : false,
  description : 'Add IPP sort to benchmarks (default: "false").')
option('build_vqsortbench', type : 'boolean', value : true,
  description : 'Add google vqsort to benchmarks (default: "true").')
option('use_openmp', type : 'boolean', value : false,
  description : 'Use OpenMP to accelerate key-value sort (default: "false").')
option('lib_type', type : 'string', value : 'shared',
  description : 'Library type: shared or static (default: "shared").')
option('fatal_sanitizers', type : 'boolean', value : 'false',
  description : 'If sanitizers are enabled, should all issues be considered fatal? (default: "false").')
option('asan_ci_dont_validate', type : 'boolean', value : 'false',
  description : 'Only for speeding up ASAN CI, do not turn on otherwise')
